[package]
name = "israeli_data_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
color-eyre = "0.6.5"
dashmap = { version = "6.1.0", features = ["serde"] }
encoding_rs = "0.8.35"
futures = "0.3.31"
grammers-client = { git = "https://github.com/Lonami/grammers" }
indicatif = { version = "0.18.0", features = ["tokio"] }
inquire = "0.9.1"
mimalloc = { version = "0.1.48", features = ["secure"] }
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["brotli", "deflate", "gzip", "json", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity_self = { version = "0.13.3", features = ["client", "gateway"] }
tokio = { version = "1.48.0", features = ["full"] }
